# Universal

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.qwen/: settings.json
apps/backend/: .env.example  Cargo.toml  Dockerfile
apps/backend/migrations/: 001_initial_schema.sql
apps/backend/src/: health.rs  main.rs  router.rs  state.rs
apps/backend/src/admin/: handlers.rs  health.rs  mod.rs  types.rs
apps/backend/src/auth/: handlers.rs  mod.rs  types.rs
apps/backend/src/db/: delete.rs  mod.rs  models.rs  queries.rs  transaction_queries.rs
apps/backend/src/error/: app_error.rs  result.rs
apps/backend/src/middleware/: auth.rs
apps/backend/src/redis/: mod.rs
apps/backend/src/transactions/: handlers.rs  mod.rs  types.rs
apps/backend/src/user/: handlers.rs
apps/backend/src/wallet/: encryption.rs  handlers.rs  hd_wallet.rs  mod.rs  types.rs
apps/web/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts  vite.config.ts.timestamp-1775991865676-532de1906307c8.mjs
apps/web/src/: index.css  main.tsx  router.tsx
apps/web/src/components/auth/: AuthModal.tsx
apps/web/src/components/layout/: AdminLayout.tsx  DashboardLayout.tsx
apps/web/src/components/ui/: toaster.tsx
apps/web/src/components/wallet/: SeedPhraseDisplay.tsx
apps/web/src/hooks/: useAuth.ts
apps/web/src/lib/: api.ts  toast.ts
apps/web/src/pages/: Landing.tsx
apps/web/src/stores/: authStore.ts  networkStore.ts
(+7 files in other folders)
