[package]
name = "universal-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "universal-server"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Authentication & Security
jsonwebtoken = "9.3.0"
argon2 = { version = "0.5.3", features = ["std"] }
zeroize = "1.7.0"
aes-gcm = "0.10.3"
rand = "0.8.5"

# Wallet Core (BIP39 only for now - blockchain-specific crates added later)
bip39 = { version = "2.0.0", features = ["rand"] }

# Error Handling
thiserror = "1.0.58"
anyhow = "1.0.81"
hex = "0.4.3"
base64 = "0.21.7"

# Logging & Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Validation
validator = { version = "0.16.1", features = ["derive"] }

# Time
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# Redis
fred = "8.0.0"

# Environment
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.12.1"
